Amend changes from pmonk's updates